swagger annotations fix
